[package]
name = "observable-maps"
version = "0.1.0"
edition = "2021"
authors = ["Harry Scholes <harryscholes@users.noreply.github.com>"]
description = "Thread-safe, generic, observable hash maps that notify observers of state changes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rust_decimal = "1.17.0"
rust_decimal_macros = "1.17"
tokio = { version = "1.13.0", features = ["full"] }
num = "0.4"